Fix slow projectable properties